<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/helpDescription_text"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/constraintLayout">

        <ImageView
            android:id="@+id/image4_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/lineDescription4"
            app:layout_constraintBottom_toBottomOf="@+id/image3_id"
            app:layout_constraintLeft_toRightOf="@+id/image3_id"
            app:layout_constraintTop_toTopOf="@+id/image3_id" />

        <ImageView
            android:id="@+id/image3_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/lineDescription3"
            app:layout_constraintBottom_toBottomOf="@+id/image2_id"
            app:layout_constraintLeft_toRightOf="@+id/image2_id"
            app:layout_constraintTop_toTopOf="@+id/image2_id" />

        <ImageView
            android:id="@+id/image2_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/lineDescription2"
            app:layout_constraintBottom_toBottomOf="@+id/image1_id"
            app:layout_constraintLeft_toRightOf="@+id/image1_id"
            app:layout_constraintTop_toTopOf="@+id/image1_id" />

        <ImageView
            android:id="@+id/image1_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/lineDescription1"
            app:layout_constraintBottom_toBottomOf="@+id/GuessUser_id"
            app:layout_constraintLeft_toRightOf="@+id/GuessUser_id"
            app:layout_constraintTop_toTopOf="@+id/GuessUser_id" />

        <TextView
            android:id="@+id/GuessUser_id"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
