<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.longynuss.guessgame.MenuScreen">

    <Button
        android:id="@+id/buttonRecord_Id"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/games_achievements"
        android:textColor="#ffffff"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leaderboard_Button_Id"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/games_leaderboards_green"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_Id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_Img"
        android:src="@drawable/guess_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="61dp" />

    <Button
        android:id="@+id/buttonSingle_Id"
        android:layout_width="@dimen/widthButton_Default"
        android:layout_height="@dimen/heightButton_Default"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttons_style"
        android:fontFamily="serif-monospace"
        android:text="@string/text_buttonSingle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_colorGreen"
        android:textSize="@dimen/textButton_sizeDefault"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_Id" />

    <Button
        android:id="@+id/buttonHowPlay_Id"
        android:layout_width="@dimen/widthButton_Default"
        android:layout_height="@dimen/heightButton_Default"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttons_style"
        android:fontFamily="serif-monospace"
        android:text="@string/text_ButtonHowPlay"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_colorGreen"
        android:textSize="@dimen/textButton_sizeDefault"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSingle_Id" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHowPlay_Id">

    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/buttonMulti_Id"
        android:layout_width="@dimen/widthButton_Default"
        android:layout_height="@dimen/heightButton_Default"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttons_style"
        android:fontFamily="serif-monospace"
        android:text="@string/text_ButtonMulti"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_colorGreen"
        android:textSize="@dimen/textButton_sizeDefault"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHowPlay_Id" />

    <Button
        android:id="@+id/sing_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttons_style"
        android:fontFamily="serif-monospace"
        android:text="@string/SignOut_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_colorGreen"
        android:textSize="@dimen/textButton_sizeDefault"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/quick_match_button"
        android:layout_width="@dimen/widthButton_Default"
        android:layout_height="@dimen/heightButton_Default"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttons_style"
        android:fontFamily="serif-monospace"
        android:text="@string/Quick_match_button_text"
        android:textAllCaps="false"
        android:textColor="@color/text_colorGreen"
        android:textSize="@dimen/textButton_sizeDefault"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_Id" />

    <Button
        android:id="@+id/invite_friends_button"
        android:layout_width="@dimen/widthButton_Default"
        android:layout_height="@dimen/heightButton_Default"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttons_style"
        android:fontFamily="serif-monospace"
        android:text="@string/invite_friends_button_text"
        android:textAllCaps="false"
        android:textColor="@color/text_colorGreen"
        android:textSize="@dimen/textButton_sizeDefault"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quick_match_button" />

    <Button
        android:id="@+id/invitations_button"
        android:layout_width="@dimen/widthButton_Default"
        android:layout_height="@dimen/heightButton_Default"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttons_style"
        android:fontFamily="serif-monospace"
        android:text="@string/invitations_button"
        android:textAllCaps="false"
        android:textColor="@color/text_colorGreen"
        android:textSize="@dimen/textButton_sizeDefault"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invite_friends_button" />

    <Button
        android:id="@+id/backMenu_fromMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttons_style"
        android:fontFamily="serif-monospace"
        android:text="@string/backMenu_fromMultiplayer_text"
        android:textAllCaps="false"
        android:textColor="@color/text_colorGreen"
        android:textSize="@dimen/textButton_sizeDefault"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/connectionMessagerToPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
